# wx

./: .gitignore  Cargo.toml  LICENSE  README.ja.md  README.md
.github/: copilot-instructions.md  pull_request_template.md
.kiro/hooks/: bilingual-comment-format.kiro.hook  create-draft-pr.kiro.hook
.kiro/specs/clone-based-workspace/: design.md  requirements.md
.kiro/specs/repo-registration/: design.md  requirements.md  tasks.md
.kiro/specs/workspace-generation/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  project-overview.md  structure.md  tech.md
src/: main.rs
src/cli/: mod.rs
src/commands/: list.rs  mod.rs  new.rs  register.rs  unregister.rs
src/config/: manager.rs  mod.rs
src/git/: mod.rs  operations.rs
src/infrastructure/: mod.rs
src/infrastructure/config/: manager.rs  mod.rs
src/infrastructure/filesystem/: mod.rs  workspace_file.rs
src/infrastructure/git/: mod.rs  operations.rs  worktree.rs
src/models/: config.rs  error.rs  mod.rs  repository.rs  workspace.rs
src/service/: mod.rs  repository.rs
src/services/: mod.rs  repository.rs  workspace.rs
src/tui/: app.rs
src/utils/: mod.rs  path.rs  test_helpers.rs
src/workspace/: file.rs  mod.rs  service.rs  worktree.rs
