[package]
name = "wx"
version = "0.0.1"
description = "A CLI tool for managing Git worktrees and VSCode workspaces"
authors = ["mzkmnk <mzk.mnk.dev@gmail.com>"]
license = "MIT"
edition = "2021"
repository = "https://github.com/mzkmnk/wx"
homepage = "https://github.com/mzkmnk/wx"
readme = "README.md"
keywords = ["git", "worktree", "workspace", "vscode", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
crossterm = "0.29.0"
ratatui = "0.29.0"
color-eyre = "0.6.3"
clap = { version = "4", features = ["derive"] }
git2 = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
dirs = "6"
regex = "1"
mockall = "0.13"
console = "0.16.1"
ptree = "0.5.2"
dialoguer = "0.12.0"

[dev-dependencies]
proptest = "1"
tempfile = "3"
rstest="0.23"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
